--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Preparing environment...
       env:
         DEBIAN_FRONTEND: "noninteractive"
-      run: sudo apt update && sudo apt upgrade -y && sudo apt install -y git build-essential cmake libsdl2-mixer-dev libsdl2-dev libgoogle-perftools-dev libopenal-dev libcurlpp-dev libssl-dev libfontconfig1-dev libcurl4-openssl-dev net-tools wget unzip zip
+      run: sudo apt update && sudo apt upgrade -y && sudo apt install -y git build-essential cmake libsdl2-mixer-dev libsdl2-dev libgoogle-perftools-dev libopenal-dev libcurlpp-dev libssl-dev libfontconfig1-dev libcurl4-openssl-dev net-tools wget unzip zip libunwind-dev
     - name: Building client...
       run: mkdir build && cd build && cmake .. -DUSE_KISAK_PHYSICS=1 -DUSE_ROCKETUI=1 && make -j2 && cd ${{ env.GITHUB_WORKSPACE }}
     - name: Preparing additional files...
